<resources>
    <string name="app_name">Walk&amp;Hike</string>
    <string name="title_activity_maps_main">MapsMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="default_notification_channel_id">WNH_1</string>
    <string name="insert_profile_picture"><u>Insert profile picture</u></string>
    <string name="log_in_link"><u>Already have an account? Log in</u></string>
    <string name="or_sign_up"><u>or Sign up</u></string>
    <string name="forgot_password"><u>Forgot password?</u></string>

    <string-array name="new_profile_image_options">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>

    <string-array name="settings_options">
        <item>Sound</item>
        <item>Notifications</item>
        <item>Location Sharing</item>
        <item>Dark Theme</item>
        <item>Unit</item>
    </string-array>

    <string-array name="profile_options">
        <item>Edit profile</item>
        <item>Settings</item>
        <item>Help</item>
        <item>Log out</item>
    </string-array>

    <string-array name="new_profile_image_options_images">
        <item>ic_photo_camera_black_24dp</item>
        <item>ic_image_black_24dp</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="notifications">Notifications</string>
    <string name="friends">Friends</string>
    <string name="map">Map</string>
    <string name="completed">Completed</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="add_message">Message</string>
    <string name="add_checkpoint">Checkpoint</string>
    <string name="add_photo">Photo</string>
    <string name="add_heart">Heart</string>
    <string name="checkpoint_add_name">Add name for your place:</string>
    <string name="share_object_with">Share with</string>
    <string name="object_make_public">make public</string>
    <string name="show_object_in_ar">show in ar</string>
    <string name="button_prev">Prev</string>
    <string name="button_next">Next</string>
    <string name="select_object_type">Select object type</string>
    <string name="insert_message">Insert your message:</string>
    <string name="edit_desc">Insert description</string>
    <string name="see_in_ar">*see in AR</string>

    <string name="loggedUser_username">userName</string>
    <string name="loggedUser_email">userEmail</string>
    <string name="loggedUser_image">userImage</string>
    <string name="loggedUser_index">userIndex</string>
    <string name="loggedUser_sound">userSound</string>
    <string name="loggedUser_notifications">userNotifications</string>
    <string name="loggedUser_location_sharing">userLocationSharing</string>
    <string name="loggedUser_dark_theme">userDarkTheme</string>
    <string name="loggedUser_unit">userUnit</string>

    <string name="NotificationsFriend">friendNotis</string>
    <string name="NotificationsNumber">friendNotis</string>
    <string name="NotificationsFromUser">fromUserNoti</string>
    <string name="NotificationsDate">NotiDate</string>


    <string name="NotiObjects">Object_notifications</string>
    <string name="NotiObjectsNumber">Object_notificationsNotis</string>
    <string name="NotiObjectsFromUser">Object_notificationsfromUser</string>
    <string name="NotiObjectsDate">Object_notificationsDate</string>
    <string name="search_hint">Search objects or users</string>


    <string name="SavedRoutesShared">Saved_routes_shared_prefs</string>
    <string name="SavedRoutesGroup">SavedRoutes_group</string>
    <string name="SavedRoute">Saved_route</string>
    <string name="NumberOfSavedTotal">saved_routes_total</string>
    <string name="NumberOfSavedGroup">saved_routes_group</string>
    <string name="ReactedObjectsPrefs">reacted_objects_shared_prefs</string>
</resources>
